# musical-funicular

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
lib/: display.wren  input.wren  platform.wren
src/: main.cpp
src/core/: application.cpp  application.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp
src/platform/glfw/: glfw_callbacks.cpp  glfw_callbacks.hpp  glfw_platform.cpp  glfw_platform.hpp
tests/: application.wren
